--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
       <form
         id="form34A"
-        action="https://gmail.us3.list-manage.com/subscribe/post"
+        action="https://github.us4.list-manage.com/subscribe/post?u=65de031cc189db9f102d4c741&amp;id=b976fe85a6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate></form>
         method="POST"
       >
         <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0" />
